Upgrading http2-common and http2-server for jetty
Bug Id: b/398304398

Full build link:
https://fusion2.corp.google.com/ci/kokoro/prod:dataproc%2Fbigtop%2Ffull-dev/activity/72dc12bb-b91f-4a25-839e-013eeb59e6d9/details

Change-Id: Ic99fd2006430c297d83bd0735f911079a7804318

--- a/plugin/trino-http-event-listener/pom.xml
+++ b/plugin/trino-http-event-listener/pom.xml
@@ -47,6 +47,18 @@
                     <artifactId>slice</artifactId>
                 </exclusion>
                 <exclusion>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-http</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-io</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-util</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>org.openjdk.jol</groupId>
                     <artifactId>jol-core</artifactId>
                 </exclusion>
