properties experimental setu[

--- a/testing/trino-server-dev/etc/config.properties
+++ b/testing/trino-server-dev/etc/config.properties
@@ -31,6 +31,7 @@ plugin.bundles=\
   ../../plugin/trino-iceberg/pom.xml,\
   ../../plugin/trino-delta-lake/pom.xml,\
   ../../plugin/trino-blackhole/pom.xml,\
+  ../../plugin/trino-bigquery/pom.xml,\
   ../../plugin/trino-cassandra/pom.xml,\
   ../../plugin/trino-memory/pom.xml,\
   ../../plugin/trino-jmx/pom.xml,\
