--- a/testing/trino-server-dev/etc/catalog/hive.properties
+++ b/testing/trino-server-dev/etc/catalog/hive.properties
@@ -6,6 +6,7 @@
 #
 
 connector.name=hive
+hive.metastore=bigquery
 
 # Configuration appropriate for Hive as started by product test environment, e.g.
 #   trino-product-tests-launcher/bin/run-launcher env up --environment multinode --without-trino
