--- a/testing/trino-server-dev/etc/catalog/hive.properties
+++ b/testing/trino-server-dev/etc/catalog/hive.properties
@@ -10,6 +10,7 @@ connector.name=hive
 # Configuration appropriate for Hive as started by product test environment, e.g.
 #   trino-product-tests-launcher/bin/run-launcher env up --environment singlenode --without-trino
 # On Mac, this additionally requires that you add "<your external IP> hadoop-master" to /etc/hosts
+hive.metastore=glue
 hive.metastore.uri=thrift://localhost:9083
 hive.hdfs.socks-proxy=localhost:1180
 
