--- a/pom.xml
+++ b/pom.xml
@@ -560,6 +560,11 @@
                 <artifactId>h2</artifactId>
                 <version>2.2.224</version>
             </dependency>
+            <dependency>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>msal4j</artifactId>
+                <version>1.13.9</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.microsoft.sqlserver</groupId>
@@ -1654,6 +1659,17 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-math3</artifactId>
                 <version>3.6.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.14</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpcore</artifactId>
+                <version>4.4.16</version>
             </dependency>
 
             <dependency>
