--- a/testing/trino-server-dev/etc/catalog/hive.properties
+++ b/testing/trino-server-dev/etc/catalog/hive.properties
@@ -10,12 +10,8 @@ connector.name=hive
 # Configuration appropriate for Hive as started by product test environment, e.g.
 #   trino-product-tests-launcher/bin/run-launcher env up --environment singlenode --without-trino
 # On Mac, this additionally requires that you add "<your external IP> hadoop-master" to /etc/hosts
-hive.metastore=glue
-hive.metastore.uri=thrift://localhost:9083
-hive.hdfs.socks-proxy=localhost:1180
-
-# Fail-fast in development
-hive.metastore.thrift.client.max-retry-time=1s
+hive.metastore=bigquery
+hive.metastore.bigquery.project-id=google.com:hadoop-cloud-dev
 
 # Be permissive in development
 hive.allow-add-column=true
