WIP: List database/tables working

--- a/testing/trino-server-dev/etc/catalog/hive.properties
+++ b/testing/trino-server-dev/etc/catalog/hive.properties
@@ -12,6 +12,7 @@ connector.name=hive
 # On Mac, this additionally requires that you add "<your external IP> hadoop-master" to /etc/hosts
 hive.metastore=bigquery
 hive.metastore.bigquery.project-id=google.com:hadoop-cloud-dev
+hive.metastore.bigquery.location=us-central1
 
 # Be permissive in development
 hive.allow-add-column=true
