--- a/testing/trino-server-dev/etc/catalog/hive.properties
+++ b/testing/trino-server-dev/etc/catalog/hive.properties
@@ -12,7 +12,10 @@ connector.name=hive
 # On Mac, this additionally requires that you add "<your external IP> hadoop-master" to /etc/hosts
 hive.metastore=bigquery
 hive.metastore.bigquery.project-id=google.com:hadoop-cloud-dev
-hive.metastore.bigquery.location=us-central1
+hive.metastore.bigquery.location=US
+hive.metastore.bigquery.warehouse-dir=gs://boqianshi-gcs
+hive.metastore-cache.cache-partitions=false
+hive.hide-delta-lake-tables=true
 
 # Be permissive in development
 hive.allow-add-column=true
