WIP: List database/tables working

--- a/testing/trino-server-dev/etc/catalog/hive.properties
+++ b/testing/trino-server-dev/etc/catalog/hive.properties
@@ -16,6 +16,8 @@ hive.metastore.bigquery.location=US
 hive.metastore.bigquery.warehouse-dir=gs://boqianshi-gcs
 hive.metastore-cache.cache-partitions=false
 hive.hide-delta-lake-tables=true
+# hive.gcs.json-key-file-path=/Users/boqianshi/.config/gcloud/application_default_credentials.json
+
 
 # Be permissive in development
 hive.allow-add-column=true
